# Monte-Carlo-Path-Tracing

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp  main.cu  ray_tracer.cu  ray_tracer.cuh
archive/: CMakeLists.txt  README.md
archive/src/: global.hpp  main.cpp  renderer.cpp  renderer.hpp
archive/src/accelerators/: aabb.cpp  aabb.hpp  accelerator.hpp  bvh.cpp  bvh.hpp
archive/src/bsdfs/: bsdf.cpp  bsdf.hpp  clear_coated_conductor.cpp  clear_coated_conductor.hpp  conductor.cpp  conductor.hpp  dielectric.cpp  dielectric.hpp  diffuse.cpp  diffuse.hpp  plastic.cpp  plastic.hpp  rough_conductor.cpp  rough_conductor.hpp  rough_dielectric.cpp  rough_dielectric.hpp  rough_plastic.cpp  rough_plastic.hpp  thin_dielectric.cpp  thin_dielectric.hpp
archive/src/core/: camera.hpp  intersection.cpp  intersection.hpp  ior.hpp  ray.cpp  ray.hpp  sampling_record.hpp  spectrum.cpp  spectrum.hpp
archive/src/emitters/: area_light.cpp  area_light.hpp  directional_emitter.cpp  directional_emitter.hpp  emitter.hpp  envmap.cpp  envmap.hpp  point_light.cpp  point_light.hpp  sky.cpp  sky.hpp  spot_light.cpp  spot_light.hpp  sun.cpp  sun.hpp
archive/src/integrators/: bdpt.cpp  bdpt.hpp  integrator.cpp  integrator.hpp  path.cpp  path.hpp  volpath.cpp  volpath.hpp
archive/src/math/: coordinate.hpp  math.hpp  sample.hpp  sampler.hpp
archive/src/media/: homogeneous.cpp  medium.hpp  medium_data.hpp
archive/src/ndfs/: beckmann.cpp  ggx.cpp  ndf.cpp  ndf.hpp
archive/src/shapes/: cube.cpp  cube.hpp  cylinder.cpp  cylinder.hpp  disk.cpp  disk.hpp  meshes.cpp  meshes.hpp  rectangle.cpp  rectangle.hpp  shape.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
archive/src/textures/: bitmap.cpp  bitmap.hpp  checkerboard.cpp  checkerboard.hpp  constant_texture.cpp  constant_texture.hpp  texture.hpp
archive/src/utils/: config_parser.cpp  config_parser.hpp  file_path.hpp  image.cpp  image.hpp  object_loader.cpp  object_loader.hpp  serialized_loader.cpp  serialized_loader.hpp  sun_model.cpp  sun_model.hpp  timer.cpp  timer.hpp
cpu_version/: CMakeLists.txt
cpu_version/src/: main.cpp  renderer.h
cpu_version/src/accelerator/: aabb.h  bvh_accel.h  bvh_node.h
cpu_version/src/bsdfs/: area_light.h  conductor.cpp  conductor.h  dielectric.cpp  dielectric.h  diffuse.cpp  diffuse.h  glossy.cpp  glossy.h  microfacet.h  plastic.cpp  plastic.h  rough_conductor.cpp  rough_conductor.h  rough_dielectric.cpp  rough_dielectric.h  rough_diffuse.cpp  rough_diffuse.h  rough_plastic.cpp  rough_plastic.h  thin_dielectric.cpp  thin_dielectric.h
cpu_version/src/core/: bsdf.h  bsdf_base.h  camera.h  emitter.h  integrator.h  integrator_base.cpp  integrator_base.h  intersection.h  ior.h  material.h  material_base.h  medium.h  medium_base.h  microfacet.h  microfacet_distribution.h  microfacet_distribution_base.h  phase_function.h  phase_function_base.h  ray.h  sampling_record.h  shape.h  shape_base.h  texture.h  texture_base.h
cpu_version/src/emitters/: area_light.h  envmap.h
cpu_version/src/integrators/: bdpt.cpp  bdpt.h  path.cpp  path.h
cpu_version/src/material/: material.h
cpu_version/src/medium/: homogeneous.h  media.h
cpu_version/src/microfacet_distribution/: beckmann.h  ggx.h
cpu_version/src/phase_function/: henyey_greenstein.h  isotropic.h
cpu_version/src/rendering/: camera.h  intersection.h  ray.h
cpu_version/src/shapes/: cube.cpp  cube.h  disk.cpp  disk.h  meshes.h  rectangle.cpp  rectangle.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
cpu_version/src/textures/: bitmap.cpp  bitmap.h  checkerboard.cpp  checkerboard.h  constant_texture.cpp  constant_texture.h  grid_texture.cpp  grid_texture.h
cpu_version/src/utils/: file_path.h  global.h  math.h  model_parser.h  timer.h
cuda_version/: CMakeLists.txt
cuda_version/src/: main.cu  renderer.cu  renderer.h
cuda_version/src/accelerator/: aabb.h  bvh_node.cu  bvh_node.h  bvh_node_info.h  scene_bvh.h  shape_bvh.h
cuda_version/src/bsdfs/: area_light.h  diffuse.h  (+8 more)
src/: CMakeLists.txt  global.cuh  main.cpp  main.cu  ray_tracer.cpp  ray_tracer.cu
src/accelerators/: aabb.cu  aabb.cuh  accel.cu  accel.cuh  accelerators.cu  accelerators.cuh  bvh.cu  bvh.cuh  linear_bvh.cu  linear_bvh.cuh  normal_bvh.cu  normal_bvh.cuh
src/bsdfs/: bsdf.cu  bsdf.cuh  bsdfs.cuh  conductor.cu  conductor.cuh  dielectric.cu  dielectric.cuh  diffuse.cu  diffuse.cuh  ior.cu  ior.cuh  plastic.cu  plastic.cuh  rough_diffuse.cu  rough_diffuse.cuh  thin_dielectric.cu  thin_dielectric.cuh
src/emitters/: directional_light.cu  directional_light.cuh  emitter.cu  emitter.cuh  emitters.cuh  env_map.cu  env_map.cuh  spot_light.cu  spot_light.cuh  sun.cu  sun.cuh  sun_sky.cu  sun_sky.cuh
src/geometry/: instance.cu  instance.cuh  primitive.cu  primitive.cuh
src/material/: material.h  texture.h
src/modeling/: envmap.h  scene.h  shape.h
src/painters/: cpu_painter.cu  cuda_painter.cu  cuda_viewer.cu  painters.cuh
src/parser/: CMakeLists.txt  ior_lut.cpp  ior_lut.cu  medium_lut.cpp  model_loader.cpp  model_loader.cu  parser.cpp  parser.cu  spectrum.cpp  spectrum.cu  sun_sky.cpp  sun_sky.cu
src/renderer/: CMakeLists.txt  camera.cpp  camera.cu  camera.cuh  integrator.cpp  integrator.cu  integrator.cuh  intersection.cu  intersection.cuh  ray.cu  ray.cuh  render.cu  renderer.cpp  renderer.cu
src/rendering/: camera.h  integrator.h  intersection.h  ray.h
src/rtcore/: CMakeLists.txt  hit.cpp  hit.cu  instance.cpp  instance.cu  ray.cpp  ray.cu  scene.cpp  scene.cu
src/tensor/: CMakeLists.txt  mat4.cpp  mat4.cu  mat4.cuh  tensor.cuh  vec2.cpp  vec2.cu  vec2.cuh  vec3.cpp  vec3.cu  vec3.cuh  vec4.cpp  vec4.cu  vec4.cuh
src/textures/: texture.cu  texture.cuh
src/utils/: CMakeLists.txt  config_parser.cu  config_parser.cuh  global.h  image_io.cpp  image_io.cu  image_io.cuh  math.cpp  math.cu  math.cuh  misc.cuh  model_loader.cu  model_loader.cuh  timer.cpp  timer.cu  timer.cuh  timer.h
tests/test_render/: CMakeLists.txt  main.cu
tests/test_rt/: CMakeLists.txt  camera.cu  camera.cuh  main.cu  model_loader.cu  model_loader.cuh
(+553 files in other folders)
